--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="lightbox/dist/css/lightbox.css">
     <link rel="stylesheet" href="fonts/poppins/poppins.css">
-    <link rel="stylesheet" href="css/apixstyle.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="body">
