--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         class="icon icon-facebook"></a>
                     <a href="https://www.instagram.com/apix_es/?igshid=YmMyMTA2M2Y%3D" target="_blank"
                         class="icon icon-instagram"></a>
-                    <a href="tel:685-45-32-81" target="_blank"class="icon icon-phone"></a>
+                    <a href="tel:+34685453281" target="_blank"class="icon icon-phone"></a>
                     <a aria-label="Chat on WhatsApp" href="https://wa.me/34600871225?" target="_blank"
                         class="icon icon-whatsapp"></a>
                     <a href="mailto:apix.spain@gmail.com" class="icon icon-envelope-o"></a>
@@ -250,7 +250,7 @@
                     <div class="wrapper-contact">
                         <a href="tel:+34685453281" class="contact-el">
                             <i class="icon-old-phone footer-icon icon-color"></i>
-                            <span class="ic-text">+34(600)685-45-32-81 EDUARDO BRIZ CANO (COMERCIAL)</span>
+                            <span class="ic-text">+34(685)-45-32-81 EDUARDO BRIZ CANO (COMERCIAL)</span>
                         </a>
     
                         <a href="tel:+34600871225" class="contact-el">
